--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "prettier": {
+    "useTabs": false,
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "bracketSameLine": false,
+    "arrowParens": "always"
+  },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
